# voly

./: .env.example  .gitignore  AGENTS.md  CHECKLIST.md  CLAUDE.md  CONTRIBUTING.md  README.en.md  README.md  README_ru.md  codeops.yaml  fix.md  opencode.jsonc  pyproject.toml  voly.yaml
headroom/: .actrc  .actrc.local.example  .changelog.md  .commitlintrc.json  .dockerignore  .env.act.example  .env.example  .git-blame-ignore-revs  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENTERPRISE.md  Makefile  PR.md  README.md  RUST_DEV.md  SECURITY.md  TESTING-copilot-subscription.md  claude_analysis_ttl.py  codecov.yml  deny.toml  docker-bake.hcl  docker-compose.yml  mkdocs.yml  pyproject.toml  rust-toolchain.toml
headroom/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.memory.yml  post-create.sh
headroom/.devcontainer/memory-stack/: devcontainer.json
headroom/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
headroom/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
headroom/.github/act/: docker-version.json  pr-governance-invalid.json  pr-governance-valid.json  push-feat.json  push-merge-pr.json  release-published.json
headroom/.github/plugin/: marketplace.json
headroom/.github/scripts/: pr-health-labels.py
headroom/.github/workflows/: ci.yml  devcontainers.yml  docker.yml  docs.yml  eval.yml  init-e2e.yml  init-native-e2e.yml  install-native-e2e.yml  network-diff-capture.yml  pr-health.yml  publish.yml  release-please.yml  release.yml  rust.yml  stale.yml  wrap-e2e.yml  wrap-native-e2e.yml
headroom/.serena/: project.yml
headroom/REALIGNMENT/: 00-overview.md  01-bug-list.md  02-architecture.md  03-phase-A-lockdown.md  04-phase-B-live-zone.md  05-phase-C-rust-proxy.md  06-phase-D-bedrock-vertex.md  07-phase-E-cache-stabilization.md  08-phase-F-auth-mode.md  09-phase-G-rtk-observability.md  10-phase-H-python-retirement.md  11-phase-I-test-infra.md  12-decisions-needed.md  INDEX.md
headroom/agent-evals/: Makefile
headroom/benchmarks/: __init__.py  adversarial_ccr_tests.py  agent_cost_benchmark.py  bench_latency.py  bench_relevance.py  bench_transforms.py  cache_bust_trace_report.py  cache_validation_bundle.py  ccr_regression_benchmark.py  claude_session_branch_compare.py  claude_session_mode_benchmark.py  comprehensive_eval.py  compression_benchmark.py  conftest.py  dynamic_detector_benchmark.py  headroom_adversarial_benchmark.py  headroom_worst_case_benchmark.py  prefix_cache_benchmark.py  proxy_mode_benchmark.py  real_world_agent_benchmark.py  run_benchmarks.py  synthetic_long_cache_suite_report.py  synthetic_token_cache_bust_report.py
headroom/benchmarks/scenarios/: __init__.py  conversations.py  tool_outputs.py
headroom/crates/headroom-core/: Cargo.toml
headroom/crates/headroom-parity/: Cargo.toml
headroom/docker/: docker-compose.native.yml
headroom/docs/: auth-modes.md  bedrock.md  claude-code-vertex-headroom.md  cortex-code.md  observability.md  output-token-reduction-guide.md  package-lock.json  package.json  rtk-architecture.md  source.config.ts
headroom/e2e/: __init__.py  docker-native-install.sh
headroom/examples/: README.md  context_compression_demo.py  strands_bedrock_demo.py  strands_bundle_demo.py  strands_mcp_dispatch_test.py  strands_via_proxy_demo.py  tabular_compression_demo.py  test_ccr.py  test_intelligent_context_toin_ccr.py
headroom/headroom/: __init__.py  _version.py  agent_savings.py  binaries.py  cli.py  client.py  compress.py  config.py  copilot_auth.py  copilot_linux_secret.py  copilot_macos_keychain.py  exceptions.py  hooks.py  onnx_runtime.py  paths.py  pipeline.py  release_version.py  shared_context.py  tokenizer.py  tools.json  update_check.py  utils.py
headroom/scripts/: README.md  audit_wheel_glibc_symbols.py  build_rust_extension.sh  changelog-gen.py  eval_output_shaper.py  export_kompress_v2_onnx.py  install-git-hooks.sh  install.ps1  install.sh  pr-governance.py  record_fixtures.py  refresh_model_limits.sh  replay_codex_ws_load.py  repro_codex_replay.py  smoke_issue_327.py  sync-plugin-versions.py  verify-versions.py  version-sync.py
headroom/sql/: create_dashboard_summary.sql  create_proxy_telemetry_v2.sql  upgrade_dashboard_v2.sql  upgrade_telemetry_cache_bust.sql  upgrade_telemetry_stack_context.sql
headroom/tests/: __init__.py  _dotenv.py  conftest.py  e2e_cortex_savings.py  e2e_real_compression.py  e2e_ws_codex_usage_headers.py  e2e_ws_responses_compression.py  repro_unsendable_panic.py  test_acceptance.py  test_adapter_hooks.py  test_adaptive_sizer.py  test_adversarial_grid.py  test_agent_savings.py  test_anthropic_beta_session_sticky.py  test_anthropic_pre_upstream_backpressure.py  test_anthropic_stage_timings.py  test_audit_codex.py  test_auth_mode.py  test_azure_foundry_claude_compression.py  test_backend_anyllm.py  test_backend_bugs.py  test_backend_streaming_cache_metrics.py  test_banner_upstream_targets.py  test_bedrock_region.py  test_binaries.py  test_bundled_tools_savings.py  test_cache_aligner_detector_only.py  test_canonical_pipeline.py  test_ccr.py  test_ccr_batch_processor.py  test_ccr_batch_store.py  test_ccr_context_tracker.py  test_ccr_feedback.py  test_ccr_mcp_server.py  test_ccr_response_handler.py  test_ccr_response_handler_extra.py  test_ccr_row_drop_store_bridge.py  test_ccr_rust_marker_hash_bridge.py  test_ccr_sqlite_backend.py  test_ccr_tool_always_on.py  (+253 more)
headroom/wiki/: ARCHITECTURE.md  LATENCY_BENCHMARKS.md  LIMITATIONS.md  agno.md  api.md  benchmarks.md  ccr.md  cli.md  compression.md  configuration.md  docker-install.md  errors.md  filesystem-contract.md  getting-started.md  image-compression.md  index.md  integration-guide.md  langchain.md  learn.md  macos-deployment.md  mcp.md  memory.md  metrics.md  network-diff-capture.md  persistent-installs.md  proxy.md  quickstart.md  sdk.md  shared-context.md  strands.md  text-compression.md  transforms.md  troubleshooting.md  typescript-sdk.md  vertex.md
(+1733 files in other folders)
