[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeops"
version = "0.1.0"
description = "CodeOps — централизованная платформа управления AI-агентами для разработки ПО"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["ai", "agent", "orchestration", "llm", "context", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
proxy = [
    "headroom-ai[proxy]>=0.27.0",
]
semantic = [
    "sentence-transformers>=2.0.0",
]
cursor = [
    "cursor-sdk>=0.1.0",
]
dspy = [
    "dspy>=2.5.0",
]
ui = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "codeops[proxy,semantic,cursor,dspy,ui,dev]",
]

[project.scripts]
codeops = "codeops.cli.main:main"

[tool.setuptools]
packages = [
    "codeops",
    "codeops.a2a",
    "codeops.agui",
    "codeops.ai_gateway",
    "codeops.catalog",
    "codeops.cli",
    "codeops.cli.commands",
    "codeops.dspy",
    "codeops.dspy.programs",
    "codeops.executor",
    "codeops.headroom",
    "codeops.inference",
    "codeops.memory",
    "codeops.models",
    "codeops.registry",
    "codeops.rtk",
    "codeops.runner",
    "codeops.scanner",
    "codeops.spend",
    "codeops.tools",
    "codeops.web",
    "codeops.workflow",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["codeops"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
