[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voly"
version = "0.1.0"
description = "VOLY — централизованная платформа управления AI-агентами для разработки ПО"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["ai", "agent", "orchestration", "llm", "context", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
proxy = [
    "headroom-ai[proxy]>=0.27.0",
]
semantic = [
    "sentence-transformers>=2.0.0",
]
cursor = [
    "cursor-sdk>=0.1.0",
]
dspy = [
    "dspy>=2.5.0",
]
ui = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]
dev = [
    "fastapi>=0.110.0",
    "httpx2>=2.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "voly[proxy,semantic,cursor,dspy,ui,dev]",
]

[project.scripts]
voly = "voly.cli.main:main"

[tool.setuptools]
packages = [
    "voly",
    "voly.a2a",
    "voly.agui",
    "voly.ai_gateway",
    "voly.catalog",
    "voly.cli",
    "voly.cli.commands",
    "voly.cloudflare",
    "voly.config",
    "voly.dspy",
    "voly.dspy.programs",
    "voly.executor",
    "voly.headroom",
    "voly.inference",
    "voly.memory",
    "voly.models",
    "voly.pipeline",
    "voly.plan",
    "voly.registry",
    "voly.rtk",
    "voly.runner",
    "voly.runtime",
    "voly.scanner",
    "voly.spend",
    "voly.tools",
    "voly.web",
    "voly.web.routes",
    # voly.workflow removed: package has no source files (only stale __pycache__)
    # voly.web.auth removed: authentication is a closed Team-tier feature (voly-cloud)
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["voly"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
pythonpath = ["."]
